# xyco

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  WORKSPACE.bazel  codecov.yml  flake.nix  lib.nix  lint.nix  package.nix  unit-test.nix
.githooks/: commit-msg  pre-commit  pre-rebase
.github/actions/setup/: action.yml
.github/actions/unit_test/: action.yml
.github/workflows/: check.yml  ci.yml  codecov.yml  codecov_coverage.yml  pre_merge.yml  upload_codecov.yml
benchmark/: BUILD.bazel  CMakeLists.txt  asio_echo_server.cc  echo_server.cc
examples/: BUILD.bazel  CMakeLists.txt  http_server.cc
include/xyco/fs/: common.ccm  file_common.ccm  file_common.h  mod.ccm  utils.ccm  utils.h
include/xyco/fs/epoll/: file.ccm  file.h  mod.ccm
include/xyco/fs/io_uring/: file.ccm  file.h  mod.ccm
include/xyco/fs/standalone/epoll/xyco/fs/: file.h
include/xyco/fs/standalone/io_uring/xyco/fs/: file.h
include/xyco/io/: buffer_reader.ccm  buffer_reader.h  common.ccm  mod.ccm  read.ccm  read.h  seek.ccm  seek.h  utils.ccm  utils.h  write.ccm  write.h
include/xyco/io/epoll/: extra.h  mod.ccm  registry.ccm  registry.h
include/xyco/io/io_uring/: extra.h  mod.ccm  registry.ccm  registry.h
include/xyco/io/standalone/epoll/xyco/io/: extra.h  registry.h
include/xyco/io/standalone/io_uring/xyco/io/: extra.h  registry.h
include/xyco/net/: common.ccm  mod.ccm  socket.ccm  socket.h
include/xyco/net/epoll/: listener.ccm  listener.h  mod.ccm
include/xyco/net/io_uring/: listener.ccm  listener.h  mod.ccm
include/xyco/net/standalone/epoll/xyco/net/: listener.h
include/xyco/net/standalone/io_uring/xyco/net/: listener.h
include/xyco/runtime/: core.ccm  driver.ccm  driver.h  future.ccm  future.h  global_registry.ccm  global_registry.h  registry.ccm  registry.h  runtime.ccm  runtime.h  runtime_ctx.ccm  runtime_ctx.h  thread_local_registry.ccm  thread_local_registry.h
include/xyco/sync/: mod.ccm  mpsc.ccm  mpsc.h  oneshot.ccm  oneshot.h
include/xyco/task/: blocking_task.ccm  blocking_task.h  join.ccm  join.h  mod.ccm  registry.ccm  registry.h  select.ccm  select.h
include/xyco/time/: clock.ccm  clock.h  driver.h  mod.ccm  registry.ccm  sleep.ccm  sleep.h  timeout.ccm  timeout.h  wheel.ccm  wheel.h
include/xyco/utils/: error.ccm  error.h  libc.ccm  logger.h  logging.ccm  overload.ccm  panic.ccm  result.h
scripts/: install_build_toolchain.sh  install_llvm.sh
src/: BUILD.bazel  CMakeLists.txt  main.cc
src/event/: mod.h
src/event/io/: file.h  mod.h  read.h  utils.cc  utils.h  write.h
src/event/net/: epoll.cc  epoll.h  listener.cc  listener.h  socket.cc  socket.h
src/event/runtime/: async.h  blocking.cc  blocking.h  driver.cc  driver.h  future.cc  future.h  mod.h  poll.cc  poll.h  registry.cc  registry.h  runtime.cc  runtime.h  runtime_base.h
src/fs/: BUILD.bazel  file.cc  file.h  utils.cc  utils.h
src/fs/epoll/: file.cc  file.h
src/fs/io_uring/: file.cc  file.h
src/fs/standalone/epoll/fs/: file.h
src/fs/standalone/io_uring/fs/: file.h
src/io/: BUILD.bazel  buffer_reader.h  driver.cc  driver.h  file.h  mod.h  read.h  seek.h  utils.cc  utils.h  write.h
src/io/epoll/: epoll.cc  epoll.h  extra.cc  extra.h  listener.cc  listener.h  mod.h  registry.cc  registry.h
src/io/io_uring/: extra.cc  extra.h  io_uring.cc  io_uring.h  listener.cc  listener.h  registry.cc  registry.h
src/io/net/: socket.cc  socket.h
src/io/standalone/epoll/io/: extra.h  registry.h
src/io/standalone/io_uring/io/: extra.h  registry.h
src/net/: BUILD.bazel  listener.cc  listener.h  socket.cc  socket.h
src/net/driver/: epoll.cc  epoll.h  mod.h
src/net/epoll/: listener.cc  listener.h
src/net/io_uring/: listener.cc  listener.h
src/net/standalone/epoll/net/: listener.h
src/net/standalone/io_uring/net/: listener.h
src/runtime/: BUILD.bazel  async.h  async_future.h  blocking.cc  blocking.h  core.cc  driver.cc  driver.h  future.cc  future.h  global_registry.h  mod.h  registry.cc  registry.h  runtime.cc  runtime.h  runtime_ctx.cc  runtime_ctx.h  thread_local_registry.h
src/runtime/utils/: join.h  select.h  type_wrapper.h
src/sync/: BUILD.bazel  mpsc.h  oneshot.h
src/task/: blocking_task.h  join.h  registry.cc  registry.h  select.h  type_wrapper.h
src/time/: BUILD.bazel  clock.cc  clock.h  driver.cc  driver.h  registry.cc  sleep.h  timeout.h  wheel.cc  wheel.h
src/utils/: BUILD.bazel  error.cc  error.h  logger.cc  logger.h  logging.cc  mod.h  overload.h  panic.cc  panic.h  result.h
tests/: BUILD.bazel  CMakeLists.txt  main.cc  utils.cc  utils.h
tests/common/: utils.cc  utils.ccm  utils.h
tests/common/epoll/: utils.cc  utils.h
tests/common/io_uring/: utils.cc  utils.h
tests/event/: future.cc
tests/event/net/: listener.cc  socket.cc
tests/fs/: file.cc
tests/io/: buffer.cc
tests/net/: listener.cc  socket.cc  tcp.cc
tests/runtime/: future.cc  join.cc  runtime.cc  select.cc
tests/sync/: mpsc.cc  oneshot.cc
tests/task/: blocking_task.cc
tests/time/: clock.cc  sleep.cc  timeout.cc
tests/utils/: fmt.cc  fmt_test.cc  result_test.cc
tests/utils/epoll/: fmt.cc  fmt_test.cc
tests/utils/io_uring/: fmt.cc  fmt_test.cc
toolchain/: cc_toolchain_config.bzl
tools/: Cargo.toml
tools/git-hooks/: Cargo.toml
tools/git-hooks/src/: commit_msg.rs  main.rs  pre_commit.rs
